meilisearch/stacks/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meilisearch-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: meilisearch.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meilisearch
            port:
              number: 7700
---
